# fawp-index

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  404.html  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE.txt  MANIFEST.in  README.md  example_usage.py  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml
.binder/: requirements.txt
.github/: DISCUSSION_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  fawp_detection.md  feature_request.md
.github/workflows/: calibration.yml  changelog.yml  ci.yml  docs.yml  publish.yml  zenodo.yml
alert_templates/: README.md  minimal.py  research.py  trading_desk.py
alerts/: index.html
benchmarks/: index.html
dashboard/: README.md  SUPABASE_SETUP.md  app.py  auth.py  control_app.py  cron_scan.py  email_digest.py  index.html  requirements.txt  rss_feed.py  seismic_app.py  seismic_watchlist.py  share.py  supabase_store.py  weather_app.py  weather_watchlist.py
dashboard/.streamlit/: config.toml  secrets.toml.example
dashboard/supabase/: migrations.sql  plan_gating.sql
docs/: alerts.md  api.md  benchmarks.md  dashboard.md  examples.md  index.md  market.md  quickstart.md  release_v0_23_0.md  significance.md  watchlist.md  weather.md
docs/assets/: fawp.css
docs/images/: README.md
examples/: crypto_example.csv  e9_2_u_vs_xi.py  equities_example.csv  example_usage.py  finance_example.py  index.html  jit_speedtest.py  macro_example.csv  quant_finance_notebook.py  reproduce_e1_e7.py  reproduce_e8.py  seismic_example.py  weather_example.py  weather_quickstart.py
examples/examples/: weather_example.py
fawp_index/: __init__.py  alert_template_presets.py  alerts.py  benchmarks.py  cli.py  compare.py  constants.py  dashboard_launcher.py  dataframe_api.py  demo_launcher.py  explain.py  exports.py  features.py  leaderboard.py  magic.py  market.py  multivariate.py  report.py  report_html.py  scan_cli.py  scan_history.py  significance.py  simulate.py  sklearn_api.py  validation.py  watchlist.py  watchlist_cli.py  watchlist_store.py  weather.py  weather_cli.py
fawp_index.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
fawp_index/capacity/: __init__.py  surfaces.py
fawp_index/core/: alpha_index.py  alpha_v2.py  estimators.py
fawp_index/data/: __init__.py  e1_horizons_sweep.csv  e2_convergence.csv  e3_curves_linear.csv  e3_curves_quadratic.csv  e3_curves_saturating.csv  e3_horizons_summary.csv  e4_robustness.csv  e5_control_cliff.csv  e6_surface_bits_mean.csv  e6_surface_bits_std.csv  e6_surface_dropout_mean.csv  e6_surface_dropout_std.csv  e7_quantum.csv  e8_confirm_final_full.csv  e8_confirm_significance.csv  e8_data.csv  e9_2_aggregate_curves.csv  e9_2_seed_curves.csv  e9_2_summary.json
fawp_index/detection/: odw.py
fawp_index/finance/: quant.py
fawp_index/io/: csv_loader.py  feeds.py
fawp_index/oats/: __init__.py  _plots.py  model.py  robustness.py  surfaces.py
fawp_index/quant/: __init__.py  events.py  momentum.py  regime.py  risk.py
fawp_index/scanner/: __init__.py  presets.py
fawp_index/stream/: live.py
fawp_index/viz/: plotly_plots.py  plots.py
images/: index.html
market/: index.html
notebooks/: E9_full_replication.ipynb  fawp_demo.ipynb  oats_demo.ipynb
quickstart/: index.html
release_v0_23_0/: index.html
scripts/: generate_readme_screenshot.py
search/: search_index.json
significance/: index.html
tests/: test_benchmarks.py  test_bug_regressions.py  test_core.py  test_data.py  test_explain.py  test_exports.py  test_leaderboard.py  test_market.py  test_oats.py  test_significance_compare.py  test_watchlist_alerts.py  test_watchlist_cli.py  test_weather.py
watchlist/: index.html
weather/: index.html
