[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fawp-index"
version = "0.27.0"
description = "FAWP Alpha Index — Information-Control Exclusion Principle detector"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE.txt"]
authors = [{ name = "Ralph Clayton" }]
requires-python = ">=3.8"
keywords = [
    "forecasting", "information theory", "mutual information",
    "agency", "control theory", "time series", "FAWP"
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Office/Business :: Financial",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Financial and Insurance Industry",
]
dependencies = [
    "numpy>=1.21",
    "pandas>=1.3",
]

[project.optional-dependencies]
plot    = ["matplotlib>=3.4"]
plotly  = ["plotly>=5.0"]
fast    = ["numba>=0.57"]
report  = ["reportlab>=4.0", "matplotlib>=3.4"]
finance = ["yfinance>=0.2"]
weather = [
    "requests>=2.28",
    "openmeteo-requests>=0.3",
    "requests-cache>=1.0",
    "retry-requests>=1.0",
    "xarray>=2023.1",
    "netcdf4>=1.6",
]
sklearn = ["scikit-learn>=1.0"]
dashboard = [
  "streamlit>=1.30",
  "matplotlib>=3.4",
  "yfinance>=0.2",
  "supabase>=2.0",
]
test    = ["pytest>=7.0", "pytest-cov>=4.0", "matplotlib>=3.4", "reportlab>=4.0"]
dev     = ["pytest>=7.0", "pytest-cov>=4.0", "matplotlib>=3.4", "reportlab>=4.0",
           "scikit-learn>=1.0", "twine>=4.0", "build>=0.10", "ruff>=0.1"]
all     = ["matplotlib>=3.4", "reportlab>=4.0", "yfinance>=0.2",
           "requests>=2.28", "scikit-learn>=1.0", "plotly>=5.0",
           "numba>=0.57"]

[project.scripts]
fawp-index     = "fawp_index.cli:main"
fawp-dashboard = "fawp_index.dashboard_launcher:launch"
fawp-scan      = "fawp_index.scan_cli:main"
fawp-watchlist = "fawp_index.watchlist_cli:main"
fawp-demo      = "fawp_index.demo_launcher:launch_demo"
fawp-weather   = "fawp_index.weather_cli:main"

[project.urls]
Homepage   = "https://github.com/DrRalphClayton/fawp-index"
PyPI       = "https://pypi.org/project/fawp-index/"
Issues     = "https://github.com/DrRalphClayton/fawp-index/issues"
Changelog  = "https://github.com/DrRalphClayton/fawp-index/releases"
"Paper (E1-E7)" = "https://doi.org/10.5281/zenodo.18663547"
"Paper (E8)"    = "https://doi.org/10.5281/zenodo.18673949"
Book       = "https://www.amazon.com/dp/B0GS1ZVNM7/"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests*", "examples*", "fawp_forge*"]

[tool.setuptools.data-files]
"share/fawp-index/examples" = [
    "examples/reproduce_e8.py",
    "examples/reproduce_e1_e7.py",
    "examples/example_usage.py",
    "examples/finance_example.py",
]

[tool.setuptools.package-data]
fawp_index = ["data/*.csv", "data/*.json"]

[tool.ruff]
line-length = 100
target-version = "py39"
exclude = [
    "build",
    "dist",
    "*.egg-info",
    ".pytest_cache",
    ".ruff_cache",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
ignore = [
    "E501",   # line too long — handled by formatter
    "E741",   # ambiguous variable name — too noisy in scientific code
    "F401",   # unused import — many re-exports in __init__.py
    "UP007",  # use X|Y for union types — py3.9 compat
]
[tool.ruff.lint.per-file-ignores]
"fawp_index/__init__.py" = ["F401"]
"fawp_index/report.py"   = ["F401"]
"tests/*"                = ["F401", "F811"]
"examples/*"             = ["F401"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
